--- a/css/index.css
+++ b/css/index.css
@@ -82,7 +82,7 @@ header {
     padding-left: 10px;
     margin-bottom: 10px;
 }
-.news ul li a {
+.news ul li>a {
     position: relative;
     display: block;
     width: 100%;
@@ -92,7 +92,8 @@ header {
     width: 100%;
     height: 100%;
 }
-.news ul li a p {
+.news ul li a p,
+.carousel-caption {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -103,6 +104,11 @@ header {
     color: #fff;
     padding: 5px 10px;
 }
+.carousel-caption {
+    line-height: 40px;
+    font-size: 16px !important;
+    padding: 0 !important;
+}
 .news ul li:first-child a p {
     font-size: 16px;
     line-height: 40px;
@@ -112,6 +118,11 @@ header {
     width: 50%;
     height: 266px;
     padding-left: 0;
+}
+.carousel,
+.carousel img {
+    width: 100%;
+    height: 266px !important;
 }
 /* 发布模块 */
 .publish {
